tests/NormalTests/paczka1/small_fuzzy/86822489.err
Error in line 5: Nl2hIuBHkL A918 13,7
Error in line 6: Nl2hIuBHkL A43 3,4
Error in line 9: Nl2hIuBHkL A498 67,2
Error in line 13: Nl2hIuBHkL A43 97,1
